--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1,1 +1,342 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"authorship_tag":"ABX9TyN5FK0Zz5an3g4oDAlhVokt"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":2,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"hcUFo5D5Exyj","executionInfo":{"status":"ok","timestamp":1694768588526,"user_tz":-540,"elapsed":15945,"user":{"displayName":"E flen","userId":"14732581116546429944"}},"outputId":"a6a6cba5-8ca0-42cf-c0a0-a06eb5ff3507"},"outputs":[{"output_type":"stream","name":"stdout","text":["Mounted at /gdrive\n"]}],"source":["from google.colab import drive\n","drive.mount('/gdrive')"]},{"cell_type":"code","source":["cd '/gdrive/MyDrive/GoogleColab'"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"73xo1fZgFHLV","executionInfo":{"status":"ok","timestamp":1694768637641,"user_tz":-540,"elapsed":292,"user":{"displayName":"E flen","userId":"14732581116546429944"}},"outputId":"e75702d3-cd75-40fb-f4a8-88019f5ef6d4"},"execution_count":3,"outputs":[{"output_type":"stream","name":"stdout","text":["/gdrive/MyDrive/GoogleColab\n"]}]},{"cell_type":"code","source":["!git config --global init.master"],"metadata":{"id":"ZvIr5nIJFS9j","executionInfo":{"status":"ok","timestamp":1694768777732,"user_tz":-540,"elapsed":265,"user":{"displayName":"E flen","userId":"14732581116546429944"}}},"execution_count":5,"outputs":[]},{"cell_type":"code","source":["!git config --global user.email \"cjj642@naver.com\"\n","!git config --global user.name \"Flen-E\""],"metadata":{"id":"NgIEIIOqF1yc","executionInfo":{"status":"ok","timestamp":1694768792648,"user_tz":-540,"elapsed":3,"user":{"displayName":"E flen","userId":"14732581116546429944"}}},"execution_count":6,"outputs":[]},{"cell_type":"code","source":[],"metadata":{"id":"VunfNvNWF4CD"},"execution_count":null,"outputs":[]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyOjCMhwBJlRpdc/em4WxdPF",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Flen-E/googlecolabTest/blob/master/Untitled0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hcUFo5D5Exyj",
+        "outputId": "a6a6cba5-8ca0-42cf-c0a0-a06eb5ff3507"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /gdrive\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/gdrive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd '/gdrive/MyDrive/GoogleColab'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "73xo1fZgFHLV",
+        "outputId": "e75702d3-cd75-40fb-f4a8-88019f5ef6d4"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/gdrive/MyDrive/GoogleColab\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git config --global init.master"
+      ],
+      "metadata": {
+        "id": "ZvIr5nIJFS9j"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git config --global user.email \"cjj642@naver.com\"\n",
+        "!git config --global user.name \"Flen-E\""
+      ],
+      "metadata": {
+        "id": "NgIEIIOqF1yc"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git add .\n"
+      ],
+      "metadata": {
+        "id": "VunfNvNWF4CD"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git commit -m \"how to commit\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DYEdbp8YF_kr",
+        "outputId": "3bc093ee-f2fc-4ba2-e23f-a5b3bc775ab9"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[master (root-commit) 4c4d0c5] how to commit\n",
+            " 1 file changed, 1 insertion(+)\n",
+            " create mode 100644 Untitled0.ipynb\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git remote add origin https://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@github.com/Flen-E/googlecolabTest.git"
+      ],
+      "metadata": {
+        "id": "UmSpWK3XGLeT"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git remote -v"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tSjzzyN_GU36",
+        "outputId": "5922e140-4f27-4420-8534-3f6a116a2bf5"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "origin\thttps://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@github.com/Flen-E/googlecolabTest.git (fetch)\n",
+            "origin\thttps://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@github.com/Flen-E/googlecolabTest.git (push)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git remote set-url origin https://Flen-E@github.com/googlecolabTest.git"
+      ],
+      "metadata": {
+        "id": "P8ZrcjzeGx_F"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git remote -v\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4vGrMV0AHC46",
+        "outputId": "1322f220-6ab0-4c93-f484-8b5458832afc"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "origin\thttps://Flen-E@github.com/googlecolabTest.git (fetch)\n",
+            "origin\thttps://Flen-E@github.com/googlecolabTest.git (push)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git push origin master"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4j7r4w-KHFoC",
+        "outputId": "283409cf-5bf3-4652-9ca3-ab429f24a55c"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "remote: Not Found\n",
+            "fatal: repository 'https://github.com/googlecolabTest.git/' not found\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git remote add origin https://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@github.com/Flen-E/googlecolabTest.git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eRrTddxeHcDb",
+        "outputId": "7ab1e9f7-43eb-4e86-e746-c81b1b8138fe"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "error: remote origin already exists.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git push -u origin master"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kBxLehIDHj1r",
+        "outputId": "957b1029-fb56-48c7-84d8-d9b848b91326"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "remote: Not Found\n",
+            "fatal: repository 'https://github.com/googlecolabTest.git/' not found\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git remote set-url origin https://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@github.com/Flen-E/googlecolabTest.git"
+      ],
+      "metadata": {
+        "id": "xvAcASY-H_U7"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git push -u origin master"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fT9NvPDLIGkj",
+        "outputId": "d15c4fe5-d648-46d3-851f-bac0926eff2f"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enumerating objects: 3, done.\n",
+            "Counting objects:  33% (1/3)\rCounting objects:  66% (2/3)\rCounting objects: 100% (3/3)\rCounting objects: 100% (3/3), done.\n",
+            "Delta compression using up to 2 threads\n",
+            "Compressing objects:  50% (1/2)\rCompressing objects: 100% (2/2)\rCompressing objects: 100% (2/2), done.\n",
+            "Writing objects:  33% (1/3)\rWriting objects:  66% (2/3)\rWriting objects: 100% (3/3)\rWriting objects: 100% (3/3), 909 bytes | 181.00 KiB/s, done.\n",
+            "Total 3 (delta 0), reused 0 (delta 0), pack-reused 0\n",
+            "To https://github.com/Flen-E/googlecolabTest.git\n",
+            " * [new branch]      master -> master\n",
+            "Branch 'master' set up to track remote branch 'master' from 'origin'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd .."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iDwYJ9QcKZhC",
+        "outputId": "7d5d222c-58d7-4b24-e7fb-413b13f8086e"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/gdrive/MyDrive\n"
+          ]
+        }
+      ]
+    }
+  ]
+}
